<resources>
    <string name="app_name">Calculadora RPN</string>

    <!--Numbers keys-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>

    <!--Command keys-->
    <string name="clean">C</string>
    <string name="reset">R</string>
    <string name="delete_element">P</string>
    <string name="exec">&#8629;</string>

    <!--Operations Keys-->
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="sum">+</string>
    <string name="res">-</string>
    <string name="space">_</string>

    <!--Messages-->
    <string name="enter_number_or_operation">Introduce un número u operaciones</string>
    <string name="help">Help</string>

</resources>
