<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rmjsoft.rpncalculatorv2.MainActivity">

    <TextView
        android:id="@+id/txtStack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:scrollbars="vertical"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/txtEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:enabled="true"
        android:inputType="none"
        android:gravity="bottom"
        android:textColor="@color/black"
        android:hint="@string/enter_number_or_operation"
        android:textSize="28sp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <Button
             android:id="@+id/btnC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/clean"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless" />
         <Button
             android:id="@+id/btnR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reset"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btnP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete_element"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>

         <Button
             android:id="@+id/btnX"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mult"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <Button
             android:id="@+id/btn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/seven"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/eight"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nine"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btnD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/div"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <Button
             android:id="@+id/btn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/four"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/five"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/six"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btnPlus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sum"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
         <Button
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/one"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/two"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/three"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
         <Button
             android:id="@+id/btnRes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/res"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <Button
             android:id="@+id/btnPeriod"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dot"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>

         <Button
             android:id="@+id/btn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/zero"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>

         <Button
             android:id="@+id/btnSpace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/space"
             android:textSize="@dimen/number_button_text_size"
             style="@style/Widget.AppCompat.Button.Borderless"/>

         <Button
             android:id="@+id/btnE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/exec"
             android:textSize="30sp"
             style="@style/Widget.AppCompat.Button.Borderless"/>

      </LinearLayout>

   </LinearLayout>

</LinearLayout>
